--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,37 @@ body {
   font-weight: 500;
 }
 
-.search-form button:hover, .search-form button:focus {
+.search-form button:hover {
   background-color: #686868;
   color: #fff;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  gap: 30px
+}
+
+.load-more {
+  display: none;
+  height: 50px;
+  width: 150px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: #686868;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.load-more:hover {
+  background-color: #fff;
+  color: #686868;
 }
